[gd_scene load_steps=5 format=3 uid="uid://cgit2r0jbokat"]

[ext_resource type="PackedScene" uid="uid://bfdikwrekmdtc" path="res://Unit.tscn" id="1_lva0t"]
[ext_resource type="Texture2D" uid="uid://bf15tsoonusif" path="res://Sprites/tile_0060.png" id="2_3lohx"]
[ext_resource type="Script" path="res://PlayerUnit.gd" id="2_w1nsi"]
[ext_resource type="Texture2D" uid="uid://5y7bbgrdb22m" path="res://Sprites/tile_0100.png" id="4_ud52d"]

[node name="PlayerUnit" instance=ExtResource("1_lva0t")]
script = ExtResource("2_w1nsi")
is_player = true

[node name="SelectedSprite" type="Sprite2D" parent="." index="0"]
visible = false
self_modulate = Color(0.333333, 0.694118, 0.364706, 1)
position = Vector2(0, 4)
texture = ExtResource("2_3lohx")

[node name="HealSprite" type="Sprite2D" parent="." index="1"]
visible = false
position = Vector2(-6, -16)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_ud52d")
